Remove permgen settings
(cherry picked from commit 3ef9ec260c8aa781d212afd52268b1ddcc0bbbdc)