@@ -31,9 +31,9 @@ trait IntegTestHelper extends BeforeAndAfterEach with BackendIndependentTestHelp
       env.sparkConf.get("spark.driver.memory").map(m => Seq("--driver-memory", m)).getOrElse(Nil) ++
       // Disable GA collection by default
       Seq("--conf",  "spark.ext.h2o.disable.ga=true") ++
-      Seq("--conf", s"spark.driver.extraJavaOptions=-XX:MaxPermSize=384m -Dhdp.version=${env.hdpVersion}") ++
-      Seq("--conf", s"spark.yarn.am.extraJavaOptions=-XX:MaxPermSize=384m -Dhdp.version=${env.hdpVersion}") ++
-      Seq("--conf", s"spark.executor.extraJavaOptions=-XX:MaxPermSize=384m -Dhdp.version=${env.hdpVersion}") ++
+      Seq("--conf", s"spark.driver.extraJavaOptions=-Dhdp.version=${env.hdpVersion}") ++
+      Seq("--conf", s"spark.yarn.am.extraJavaOptions=-Dhdp.version=${env.hdpVersion}") ++
+      Seq("--conf", s"spark.executor.extraJavaOptions=-Dhdp.version=${env.hdpVersion}") ++
       Seq("--conf",  "spark.scheduler.minRegisteredResourcesRatio=1") ++
       Seq("--conf",  "spark.ext.h2o.repl.enabled=false") ++ // disable repl in tests
       Seq("--conf", s"spark.test.home=${env.sparkHome}") ++
